src/app/products/product-card-shell/product-card-shell.component.scss
@import '../../../styles/variables';
@import '../../../styles/loader';
@import '../../../styles/mixins';
:host {
    font-size: 1rem;
    display: flex;
    flex-direction: column;
}
.main {
    display: flex;
    height: fit-content(1rem);
}
.bd-showing-overlay .bd-docs-overlay {
    opacity: 0.8;
    pointer-events: auto;
  }
:host-context(.light){
    .loader {
        border-left: 1.1em solid #003e94;
    }
     .sort-menu{
        border: 1px solid $color-text-med;
     }
}
.loader {
    border-left: 1.1em solid #00947e;
}
$bd-aside-width: 15rem;
.bd {
    &-menu {
        display: flex;
        flex-direction: column;
        margin-right: 1rem;
        padding: 1rem;
        justify-content: center;
        @media screen and (max-width: 768px) {
            margin: auto;
        }
    }
    &-tags-container {
        max-width: 11.25rem;
    }
    &-buttons {
        @media screen and (max-width: 768px) {
            display: flex;
            flex-direction: column;
        }
    }
}
.container {
    flex-grow: 1;
    margin: 0 auto;
    position: relative;
    width: auto;

}
.fixed {
    width: 15rem;

}
.fixed-left {
    position: fixed;
    top: 64px;
    left: 0;
    height: calc(100vh - 8rem);
}
.centered {
    display: grid;
    place-items: center;
    padding: 1rem 1rem;

    @include hide-scrollbar;
}

.card-container {
    margin-top: 1rem;
    margin-bottom: 1rem;
    display: grid;
    grid-gap: 1rem;
    width: 100%;
    grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
}
.product-card {
    box-sizing: border-box;
    margin: 0.25rem 0.25rem;
}
.product-list-footer {
    position: fixed;
    width: 100%;
    bottom: 0;
}
.product-list-parent {
    width: 100%;
    padding: 0 1rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 4rem;
    @media screen and (max-width: 800px + 32px) {
        padding: 0;
    }
}
.menu-label {
    margin-bottom: 00.25rem;
}

.sort-menu {
    box-sizing: border-box;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1rem;
    border: 1px solid $color-bg-med;
    padding: 0.25rem;
    border-radius: 0.25rem;
}

mat-button-toggle-group {
    border: 0!important;
    padding: 0!important;
    * {
        padding-left: 0;
    }
    &.columns {
        flex-direction: column;
        justify-content: center;
        width: 100%;
    }
    .mat-button-toggle {
        padding:0;
        border: 0!important;
        color: inherit;
        padding: 0;
        margin: 0;
        font: inherit;
        outline: none;
        width: 100%;
        cursor: pointer;
        margin-bottom: 0.25rem;
        background: $color-text-light;
        &.mat-button-toggle-checked {
            filter: brightness(80%);
         }
    }
    &.dark-mode {
        .mat-button-toggle {
            background: $color-bg-med;
        }
        .mat-button-toggle-checked {
            filter: brightness(140%);
         }
    }
}

